--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_session: ^0.1.1
   shared_preferences: ^0.5.12+4
   url_launcher: ^5.7.5
+  flutter_spinkit: ^4.0.0
 
 dev_dependencies:
   flutter_test:
